mengupdate return data

--- a/5.html
+++ b/5.html
@@ -28,7 +28,7 @@
             var data2 = data[2].sort();
             data2 = data2.reverse().slice(0, 1);
 
-            return data = '['+data0+'], '+'['+data1+'], '+'['+data2+']';
+            return data = "['"+data0+"', '"+data1+"', '"+data2+"']";
         }
 
         document.writeln(data_array(data));
